--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,17 @@ body {
     text-wrap: balance;
   }
 }
+
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
